--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-asyncio
-googletrans
+anyio==4.9.0
+asyncio==3.4.3
+certifi==2025.4.26
+googletrans==4.0.2
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+RapidFuzz==3.13.0
+sniffio==1.3.1
+typing_extensions==4.14.0
